Fixed some CSS ~issues~ (Made Buttons More Visible)

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -196,7 +196,7 @@ hr {
   border: 2px solid rgba(0, 0, 0, 0.7);
   border-bottom: 2px solid rgba(0, 0, 0, 0.7);
   border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(0, 0, 0, 0.8);
+  color: #c3c0f5;
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-size: 13px;
@@ -239,7 +239,7 @@ hr {
 */
 
 a {
-  color: #63c0f5;
+  color: #c3c0f5;
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
 }
 
